--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -20,7 +20,7 @@
         android:paddingTop="8dp"
         android:textSize="20sp"
         android:text="@string/username"
-        android:textColor="@color/black"
+        android:textColor="?colorOnSecondary"
         android:textStyle="bold"/>
     
     <TextView
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
+        android:textColor="?colorOnSecondary"
         android:text="@string/email"/>
     
     <View
