--- a/app/src/main/res/drawable-v24/bg_round_btn_back.xml
+++ b/app/src/main/res/drawable-v24/bg_round_btn_back.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/pastel_blue"/>
-    <stroke android:width="0dp" android:color="@color/gray"/>
+    <solid android:color="?colorPrimary"/>
     <corners android:radius="10dp" />
 </shape>
