--- a/app/src/main/res/drawable-v24/bg_round_pastel_blue_no_border.xml
+++ b/app/src/main/res/drawable-v24/bg_round_pastel_blue_no_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/gray_blue"/>
+    <solid android:color="?colorPrimary"/>
     <stroke android:width="0dp" android:color="@color/black"/>
     <corners android:radius="10dp" />
 </shape>
