--- a/app/src/main/res/layout/action_item.xml
+++ b/app/src/main/res/layout/action_item.xml
@@ -16,30 +16,30 @@
             android:orientation="vertical">
 
 
-                <FrameLayout
+            <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                    android:layout_marginTop="-5dp"
+                android:layout_marginTop="-5dp"
                 android:background="@drawable/bg_round_gray"
                 android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/actionName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:layout_marginHorizontal="5dp"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/mute_the_sound"
-                        android:textSize="20sp" />
+                <TextView
+                    android:id="@+id/actionName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="5dp"
+                    android:text="@string/mute_the_sound"
+                    android:textColor="?colorOnPrimary"
+                    android:textSize="20sp" />
 
-                </FrameLayout>
+            </FrameLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
 
                 <ImageView
@@ -58,9 +58,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginVertical="10dp"
-                    android:textStyle="bold"
                     android:text="@string/home"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
