--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_margin="20dp"
         android:padding="20dp"
         android:text="@string/sign_in_with_google"
-        android:textColor="#000"
+        android:textColor="?colorOnPrimarySurface"
         android:textSize="22sp"
         android:background="@color/gray"/>
 
