--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -31,6 +31,7 @@
             android:layout_marginStart="15dp"
             android:backgroundTint="@android:color/transparent"
             android:hint="@string/search_location"
+            android:textColorHint="@color/gray"
             android:inputType="textPersonName"
             android:textColor="@color/black" />
 
