--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerPlacesLayout"
     android:layout_width="match_parent"
-    android:background="@color/slight_gray"
+    android:background="?colorSecondary"
     android:layout_height="match_parent"
     tools:context=".HomeFragments.ActionsFragment">
     
@@ -37,6 +37,7 @@
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_baseline_add_24"
         android:contentDescription="@string/add"
+        android:backgroundTint="?colorPrimary"
         android:layout_margin="16dp" />
 
 </FrameLayout>
