--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -5,16 +5,17 @@
     android:id="@+id/drawerPlacesLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/slight_gray"
+    android:background="?colorSecondary"
     tools:context=".HomeFragments.PlacesFragment">
 
     <TextView
-        android:layout_marginHorizontal="5dp"
-        android:layout_marginStart="15dp"
+        android:gravity="center"
+        android:layout_marginVertical="5dp"
         android:textSize="20sp"
         android:layout_width="match_parent"
         android:text="@string/list_of_places"
         android:textStyle="bold"
+        android:textColor="?colorOnSecondary"
         android:layout_height="wrap_content"/>
 
     <ListView
@@ -34,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_baseline_add_24"
+        android:backgroundTint="?colorPrimary"
         android:contentDescription="@string/add"
         android:layout_margin="16dp" />
 
