--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
 
     android:orientation="vertical"
-    android:background="@color/slight_gray"
+    android:background="?colorSecondary"
     tools:context=".HomeFragments.SettingsFragment">
 
     <TextView
@@ -25,7 +25,7 @@
             android:id="@+id/languagesSpinner"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/white"
+            android:background="?colorPrimaryVariant"
             android:spinnerMode="dropdown"/>
     </LinearLayout>
 
@@ -59,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/location"
+                android:textColor="?colorOnPrimary"
                 android:textSize="20sp"
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
 
@@ -77,6 +78,7 @@
                 android:layout_marginVertical="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="?colorOnPrimary"
                 android:text="@string/contacts"
                 android:textSize="20sp"
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
@@ -96,6 +98,7 @@
                 android:layout_marginVertical="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="?colorOnPrimary"
                 android:text="@string/sms"
                 android:textSize="20sp"
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
@@ -122,7 +125,7 @@
         android:orientation="vertical">
         <SeekBar
             android:id="@+id/rangeSlider"
-            android:layout_width="400dp"
+            android:layout_width="match_parent"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:max="500"
