--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,7 +9,7 @@
     tools:context=".HomeFragments.SettingsFragment">
 
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginVertical="20dp"
         android:layout_marginStart="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +31,7 @@
 
 
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginVertical="20dp"
         android:layout_marginStart="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -107,14 +107,36 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/funThing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"
+            android:text="@string/if_you_want_to_deny_a_permission_you_need_to_go_to"
+            android:textSize="15sp" />
+        <TextView
+            android:layout_marginHorizontal="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"
+            android:text="@string/settings_apps_remloc_permissions"
+            android:textSize="15sp" />
+
+    </LinearLayout>
 
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginVertical="20dp"
         android:layout_marginStart="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
-        android:layout_marginBottom="10dp"
         android:text="Change default trigger distance"
         android:textSize="20sp" />
 
@@ -159,34 +181,14 @@
 
     </LinearLayout>
 
+
+
+
     <LinearLayout
-        android:id="@+id/funThing"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/gray"
-            android:text="@string/if_you_want_to_deny_a_permission_you_need_to_go_to"
-            android:textSize="15sp" />
-        <TextView
-            android:layout_marginHorizontal="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/gray"
-            android:text="@string/settings_apps_remloc_permissions"
-            android:textSize="15sp" />
-
-    </LinearLayout>
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <Button
             android:id="@+id/deleteAllFromDatabase"
@@ -197,7 +199,17 @@
             android:layout_marginBottom="20dp"
             android:text="@string/delete_all_data_from_app"/>
 
-    </FrameLayout>
+
+            <Button
+                android:id="@+id/stopForeground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/red"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:text="Stop tracking Location"/>
+
+    </LinearLayout>
 
 
 
