--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -187,8 +187,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="bottom"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <Button
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:id="@+id/stopForeground"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/red"
+                android:layout_gravity="center"
+                android:text="Stop tracking Location"/>
+
+            <Button
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:id="@+id/startForeground"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/green"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:text="Start tracking Location"/>
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/deleteAllFromDatabase"
@@ -200,14 +230,9 @@
             android:text="@string/delete_all_data_from_app"/>
 
 
-            <Button
-                android:id="@+id/stopForeground"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/red"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
-                android:text="Stop tracking Location"/>
+
+
+
 
     </LinearLayout>
 
