--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="red">#DD982727</color>
     <color name="yellow">#DD9E8013</color>
     <color name="underlineColor">#BDB8B8</color>
+    <color name="green">#DD005512</color>
 
 
 
