--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -20,6 +20,12 @@
     </ListView>
 
 
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Hey"-->
+<!--        android:id="@+id/btnCheckActions"/>-->
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_action"
         android:layout_width="wrap_content"
