--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MapsActivity">
 
 
@@ -35,6 +36,7 @@
             android:inputType="textPersonName"
             android:textColor="@color/black" />
 
+
         <ImageButton
             android:id="@+id/search"
             android:layout_width="wrap_content"
@@ -44,7 +46,6 @@
             app:srcCompat="@drawable/ic_magnify" />
 
     </LinearLayout>
-
 
 
     <Button
