--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -43,6 +43,7 @@
 
     <LinearLayout
         android:layout_marginVertical="5dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content">
