--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
 
 
-    <Button
-        android:id="@+id/sign_in"
+    <LinearLayout
+        android:layout_gravity="top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:padding="20dp"
-        android:text="@string/sign_in_with_google"
-        android:textColor="?colorOnPrimarySurface"
-        android:textSize="22sp"
-        android:background="@color/gray"/>
+        android:orientation="vertical">
 
+        <ImageView
+            android:layout_marginTop="50dp"
+            android:layout_gravity="center"
+            android:id="@+id/app_icon"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome_to_remloc"
+            android:textSize="24sp" />
+
+    </LinearLayout>
+
+    <!-- Google Sign In Button -->
+    <com.google.android.gms.common.SignInButton
+        android:layout_marginTop="50dp"
+        android:id="@+id/sign_in"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
