--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
-        android:text="To use the application, please provide us a permissions!"
+        android:text="@string/to_use_the_application_please_provide_us_a_permissions"
         android:textSize="20sp" />
 
 
@@ -90,6 +90,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
-        android:text="Next"/>
+        android:text="@string/next"/>
 
 </LinearLayout>
