--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,242 +1,251 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    android:orientation="vertical"
     android:background="?colorSecondary"
-    tools:context=".HomeFragments.SettingsFragment">
-
-    <TextView
-        android:layout_marginVertical="20dp"
-        android:layout_marginStart="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/gray"
-        android:text="@string/language"
-        android:layout_marginBottom="10dp"
-        android:textSize="20sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Spinner
-            android:id="@+id/languagesSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="?colorPrimaryVariant"
-            android:spinnerMode="dropdown"/>
-    </LinearLayout>
-
-
-    <TextView
-        android:layout_marginVertical="20dp"
-        android:layout_marginStart="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/gray"
-        android:layout_marginBottom="10dp"
-        android:text="@string/permissions"
-        android:textSize="20sp" />
-
-
-    <LinearLayout
-        android:layout_marginVertical="5dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:background="@drawable/bg_round_pastel_blue_no_border"
-            android:layout_height="wrap_content">
-
-            <Switch
-                android:id="@+id/locationSwitch"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginVertical="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/location"
-                android:textColor="?colorOnPrimary"
-                android:textSize="20sp"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:background="@drawable/bg_round_pastel_blue_no_border"
-            android:layout_height="wrap_content">
-
-            <Switch
-                android:id="@+id/contactsSwitch"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginVertical="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="?colorOnPrimary"
-                android:text="@string/contacts"
-                android:textSize="20sp"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:background="@drawable/bg_round_pastel_blue_no_border"
-            android:layout_height="wrap_content">
-
-            <Switch
-                android:id="@+id/smsSwitch"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginVertical="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="?colorOnPrimary"
-                android:text="@string/sms"
-                android:textSize="20sp"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/funThing"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/gray"
-            android:text="@string/if_you_want_to_deny_a_permission_you_need_to_go_to"
-            android:textSize="15sp" />
-        <TextView
-            android:layout_marginHorizontal="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/gray"
-            android:text="@string/settings_apps_remloc_permissions"
-            android:textSize="15sp" />
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_marginVertical="20dp"
-        android:layout_marginStart="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/gray"
-        android:text="Change default trigger distance"
-        android:textSize="20sp" />
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <SeekBar
-            android:id="@+id/rangeSlider"
-            android:layout_width="match_parent"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:max="500"
-            />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-
-            <TextView
-                android:id="@+id/sliderRangeValue"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:textColor="@color/gray"
-                android:textSize="20sp"
-                android:text="25"/>
-
-            <TextView
-                android:id="@+id/meters"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:textColor="@color/gray"
-                android:textSize="20sp"
-                android:text=" m"/>
-        </LinearLayout>
-
-
-
-    </LinearLayout>
-
-
-
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="?colorSecondary"
+        tools:context=".HomeFragments.SettingsFragment">
+
+        <TextView
+            android:layout_marginVertical="20dp"
+            android:layout_marginStart="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"
+            android:text="@string/language"
+            android:layout_marginBottom="10dp"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Spinner
+                android:id="@+id/languagesSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="?colorPrimaryVariant"
+                android:spinnerMode="dropdown"/>
+        </LinearLayout>
+
+
+        <TextView
+            android:layout_marginVertical="20dp"
+            android:layout_marginStart="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"
+            android:layout_marginBottom="10dp"
+            android:text="@string/permissions"
+            android:textSize="20sp" />
+
+
+        <LinearLayout
+            android:layout_marginVertical="5dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:background="@drawable/bg_round_pastel_blue_no_border"
+                android:layout_height="wrap_content">
+
+                <Switch
+                    android:id="@+id/locationSwitch"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/location"
+                    android:textColor="?colorOnPrimary"
+                    android:textSize="20sp"
+                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:background="@drawable/bg_round_pastel_blue_no_border"
+                android:layout_height="wrap_content">
+
+                <Switch
+                    android:id="@+id/contactsSwitch"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="?colorOnPrimary"
+                    android:text="@string/contacts"
+                    android:textSize="20sp"
+                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:background="@drawable/bg_round_pastel_blue_no_border"
+                android:layout_height="wrap_content">
+
+                <Switch
+                    android:id="@+id/smsSwitch"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="?colorOnPrimary"
+                    android:text="@string/sms"
+                    android:textSize="20sp"
+                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/funThing"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray"
+                android:text="@string/if_you_want_to_deny_a_permission_you_need_to_go_to"
+                android:textSize="15sp" />
+            <TextView
+                android:layout_marginHorizontal="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray"
+                android:text="@string/settings_apps_remloc_permissions"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_marginVertical="20dp"
+            android:layout_marginStart="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"
+            android:text="@string/change_default_trigger_distance"
+            android:textSize="20sp" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <Button
-                android:layout_marginVertical="10dp"
-                android:layout_marginHorizontal="10dp"
-                android:id="@+id/stopForeground"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@color/red"
+            android:orientation="vertical">
+            <SeekBar
+                android:id="@+id/rangeSlider"
+                android:layout_width="match_parent"
                 android:layout_gravity="center"
-                android:text="Stop tracking Location"/>
-
-            <Button
-                android:layout_marginVertical="10dp"
-                android:layout_marginHorizontal="10dp"
-                android:id="@+id/startForeground"
-                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@color/green"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
-                android:text="Start tracking Location"/>
+                android:max="500"
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:id="@+id/sliderRangeValue"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray"
+                    android:textSize="20sp"
+                    android:text="25"/>
+
+                <TextView
+                    android:id="@+id/meters"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray"
+                    android:textSize="20sp"
+                    android:text="@string/m"/>
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/deleteAllFromDatabase"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/red"
-            android:layout_gravity="bottom|center"
-            android:layout_marginBottom="20dp"
-            android:text="@string/delete_all_data_from_app"/>
 
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <Button
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:id="@+id/stopForeground"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/red"
+                    android:layout_gravity="center"
+                    android:text="@string/stop_tracking_location"/>
+
+                <Button
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:id="@+id/startForeground"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/green"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:text="@string/start_tracking_location"/>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/deleteAllFromDatabase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/red"
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="20dp"
+                android:text="@string/delete_all_data_from_app"/>
+
+
+
+
+
+
+        </LinearLayout>
 
 
 
     </LinearLayout>
 
+</ScrollView>
 
-
-</LinearLayout>
